syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.goodbyeworld";
option java_outer_classname = "GoodbyeWorldProto";
option objc_class_prefix = "GBW";

package goodbyeworld;

// The farewell service definition.
service Farewell {
    // Sends a farewell
    rpc SayGoodbye (GoodbyeRequest) returns (GoodbyeReply) {}
}

// The request message containing the user's name.
message GoodbyeRequest {
    string name = 1;
}

// The response message containing the farewells
message GoodbyeReply {
    string message = 1;
}