syntax = "proto2";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld.v2";
option java_outer_classname = "HelloWorldProtoV2";

package helloworld.v2;

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
    required string name = 1;
}

message HelloReply {
    required string message = 1;
}